fix: instal scripts